<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".TaskListActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_list_header"
        android:textSize="24sp"
        android:textColor="@color/primaryTextColor"
        android:padding="16dp"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:shadowColor="@color/shadowColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ListView for Tasks -->
    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:divider="@color/dividerColor"
        android:dividerHeight="1dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Navigation Bar -->
    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Task List Icon -->
        <ImageView
            android:id="@+id/navTaskList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/task_list"
            android:padding="12dp"
            android:src="@drawable/ic_task_list"
            app:layout_constraintHorizontal_weight="1"/>

        <!-- Timer/Stopwatch Icon -->
        <ImageView
            android:id="@+id/navTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/timer_stopwatch"
            android:padding="12dp"
            android:src="@drawable/ic_timer"
            app:layout_constraintHorizontal_weight="1"/>

        <!-- Reminder Icon -->
        <ImageView
            android:id="@+id/navReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/reminder"
            android:padding="12dp"
            android:src="@drawable/ic_reminder"
            app:layout_constraintHorizontal_weight="1"/>

        <!-- Home Icon -->
        <ImageView
            android:id="@+id/navHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/home"
            android:padding="12dp"
            android:src="@drawable/ic_home"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
